form color change

--- a/_partials/contact/contact.less
+++ b/_partials/contact/contact.less
@@ -124,14 +124,14 @@ label          {
 input:focus ~ label, input:valid ~ label    {
   top:-20px;
   font-size:14px;
-  color:@brand-primary;
+  color:@brand-secondary;
 }
 
 /* active state */
 input[type="email"]:focus ~ label, input[type="email"]:valid ~ label    {
   top:-20px;
   font-size:14px;
-  color:@brand-primary;
+  color:@brand-secondary;
 }
 
 /* TEXTAREA ======================================*/
@@ -170,7 +170,7 @@ textarea ~ label          {
 textarea:focus ~ label ,textarea:valid ~ label    {
   top:-15px;
   font-size:14px;
-  color:@brand-primary;
+  color:@brand-secondary;
 }
 
 
@@ -182,7 +182,7 @@ textarea:focus ~ label ,textarea:valid ~ label    {
   width:0;
   bottom:0px;
   position:absolute;
-  background:@brand-primary;
+  background:@brand-secondary;
   transition:0.2s ease all;
   -moz-transition:0.2s ease all;
   -webkit-transition:0.2s ease all;
