smoth scroll on demo

--- a/_partials/navbar/navbar.jade
+++ b/_partials/navbar/navbar.jade
@@ -20,4 +20,4 @@
           a(data-scroll href='#contacts') CONTACT US
 
         li
-          a.demo(href='#contacts') DEMO
+          a.demo(data-scroll href='#contacts') DEMO
