--- a/_partials/about/about.jade
+++ b/_partials/about/about.jade
@@ -8,7 +8,7 @@ section#about
             | TapFuse is a mobile application development company based in London that offers a complimentary suite of applications for clients globally. Our aim is to develop simple, intuitive, and secure multi-platform applications that help to connect and share information in a unique social media system for professional and educational environments.
       .col-xs-12.col-md-6
         .img-content
-          img.tapfuse(src="img/tapfuse@2x.png", alt="")
+          img.tapfuse(src="img/tapfuse_logo@2x.png", alt="Tapfuse mobile app development")
         .controls.centered
           button.btn.outlined.expanded
             a(href="http://tapfuse.io" target='_blank' ) VISIT WEBSITE
