--- a/_layout.jade
+++ b/_layout.jade
@@ -41,7 +41,7 @@ html
     });
 
   script.
-    new Vivus('animation', {type: 'delayed', duration: 150, start:'inViewport'} );
+    new Vivus('animation', {type: 'delayed', duration: 150} );
 
 
     //-  clears form on after submiting
