--- a/_partials/clients/clients.jade
+++ b/_partials/clients/clients.jade
@@ -48,7 +48,7 @@ section#clients.bg-gray
     .row
       .col-xs-6.col-sm-4.col-md-3
         .client
-          img(src="img/clients/13_creative.png", alt="Creative Communications")
+          img.creative(src="img/clients/13_creative.png", alt="Creative Communications")
       .col-xs-6.col-sm-4.col-md-3
         .client
           img(src="img/clients/14_kcp.png", alt="Kimberly Clark Professionals")
@@ -63,7 +63,7 @@ section#clients.bg-gray
     .row
       .col-xs-6.col-sm-4.col-md-3
         .client
-          img.align(src="img/clients/17_wikimania.png", alt="Wikimania 2014")
+          img(src="img/clients/17_wikimania.png", alt="Wikimania 2014")
       .col-xs-6.col-sm-4.col-md-3
         .client
-          img.align(src="img/clients/18_wikimedia.png", alt="Wikimedia Foundation")
+          img(src="img/clients/18_wikimedia.png", alt="Wikimedia Foundation")
