--- a/_partials/clients/clients.less
+++ b/_partials/clients/clients.less
@@ -14,7 +14,11 @@
 }
 
 .align {
-  width:100px;
+  width:120px;
+}
+
+.creative {
+  width:180px;
 }
 
 @media (width: 320px) {
@@ -22,3 +26,5 @@
     width:90%;
   }
 }
+
+
