bigger wide logos

--- a/_partials/clients/clients.jade
+++ b/_partials/clients/clients.jade
@@ -57,7 +57,7 @@ section#clients.bg-gray
           img(src="img/clients/15_dmk.png", alt="DMK Baby")
       .col-xs-6.col-sm-4.col-md-3
         .client
-          img(src="img/clients/16_intertrade.png", alt="InterTradeIreland")
+          img.intertrade(src="img/clients/16_intertrade.png", alt="InterTradeIreland")
 
 
     .row
