--- a/_partials/clients/clients.less
+++ b/_partials/clients/clients.less
@@ -8,17 +8,27 @@
   text-align:center;
   img {
     margin:auto;
-    max-width:150px;
+    width:150px;
     text-align: center;
   }
+
 }
+
+.client>img.creative {
+    width:200px;
+  }
+
+
+.client>img.intertrade {
+    width:180px;
+  }
 
 .align {
   width:120px;
 }
 
 .creative {
-  width:180px;
+  width:190px;
 }
 
 @media (width: 320px) {
