dress info change

--- a/_partials/contact/contact.jade
+++ b/_partials/contact/contact.jade
@@ -13,13 +13,13 @@ section#contacts.bg-gray
                 h3.title Our headquaters
                 .address
                   img.adr_icon(src="img/contact/location@2x.png" alt="UK Headquaters address")
-                  p.subhead-1.icn-float Tapfuse Limited<br> Bradley Lynch Court, 29 <br> London, UK
+                  p.subhead-1.icn-float Tapfuse Limited<br> 16-24 Underwood Street <br> London, UK
                 .address
                   img.adr_icon(src="img/contact/email@2x.png" alt="Email address")
                   a(href="mailto:info@tapfuse.io").subhead-1.icn-float info@tapfuse.io
                 .address
-                  img.adr_icon(src="img/contact/phone@2x.png" alt="Phone contact")
-                  p.subhead-1.icn-float +44 111 222 222
+                  img.adr_icon(src="img/contact/email@2x.png" alt="Phone contact")
+                  a(href="mailto:support@tapfuse.io").subhead-1.icn-float support@tapfuse.io
 
                 img.map(src="img/contact/ukmap@2x.png" alt="Headquaters")
 
