--- a/_partials/contact/contact.less
+++ b/_partials/contact/contact.less
@@ -35,7 +35,7 @@
 }
 
 a.subhead-1 {
-  padding-left: 7px;
+  padding-left: 6px;
   padding-bottom: 2px;
 }
 
@@ -252,6 +252,11 @@ color:white;
   background:darken(@brand-secondary, 25%);
 }
 
+@media (max-width:359px) {
+  .jfk-button {
+    width:100%;
+  }
+}
 
 
 
