--- a/_partials/contact/contact.jade
+++ b/_partials/contact/contact.jade
@@ -6,7 +6,7 @@ section#contacts.bg-gray
     .row
       .col-xs-12.col-md-5.col-md-push-7
         .address-details
-          p.subhead-1 Do not hesitate to contact us by filling out our contact form or get in touch by mail or phone that is provided below.
+          p.subhead-1 Do not hesitate to contact us by filling out our contact form or get in touch by mail  that is provided below.
           .row
             .col-md-12
               .content.addr-info
