--- a/_layout.jade
+++ b/_layout.jade
@@ -48,9 +48,11 @@ html
 
   script.
     function resetForm() {
-    var frm = document.getElementById('contact_form');
-    frm.submit(); // Submit
-    frm.reset();  // Reset
+    var frm = $('#contact_form')[0];
+    if (frm.checkValidity()) {
+        frm.submit(); // Submit
+        frm.reset();  // Reset
+    }
     return false; // Prevent page refresh
     };
 
