--- a/_layout.jade
+++ b/_layout.jade
@@ -52,6 +52,10 @@ html
     if (frm.checkValidity()) {
         frm.submit(); // Submit
         frm.reset();  // Reset
+        //- show modal thank you
+        //- window.setTimeout(function() {
+        //-     //- hide modal thank you
+        //-     }, 2000)
     }
     return false; // Prevent page refresh
     };
