fix for iOS validation support for forms

--- a/_layout.jade
+++ b/_layout.jade
@@ -41,10 +41,16 @@ html
     });
 
   script.
+    $(document).ready(function () {
+        $('form').h5Validate();
+    });
+
+  script.
     new Vivus('animation', {type: 'delayed', duration: 150} );
 
 
     //-  clears form on after submiting
+
 
   script.
     function resetForm() {
