--- a/_partials/contact/contact.jade
+++ b/_partials/contact/contact.jade
@@ -42,7 +42,7 @@ section#contacts.bg-gray
               span.bar
               label  Name of your company
             .group
-              input#entry_1402798169.ss-q-short(type='text', name='entry.1402798169', value='', dir='auto', aria-label='Phone number  ', aria-required='true', required='', title='')
+              input#entry_1402798169.ss-q-short(type='tel', name='entry.1402798169', value='', dir='auto', aria-label='Phone number  ', aria-required='true', required='', title='')
               span.highlight
               span.bar
               label  Phone number
