--- a/index.jade
+++ b/index.jade
@@ -10,5 +10,7 @@
 != partial("_partials/about/about")
 != partial("_partials/contact/contact")
 != partial("_partials/footer/footer")
+!= partial("_partials/modal/modal")
+
 
 
