--- a/styles.less
+++ b/styles.less
@@ -17,5 +17,6 @@
 @import '_partials/clients/clients';
 @import '_partials/contact/contact';
 @import '_partials/footer/footer';
+@import '_partials/modal/modal';
 
 
