--- a/_partials/events/events.less
+++ b/_partials/events/events.less
@@ -2,7 +2,7 @@
 .events {
   height:100%;
   text-align: center;
-  background: url(http://i.imgur.com/YnxwFfC.jpg) no-repeat  center center;
+  background: url('img/events/background.jpg') no-repeat  center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
