--- a/_partials/about/about.jade
+++ b/_partials/about/about.jade
@@ -11,5 +11,5 @@ section#about
           img.tapfuse(src="img/tapfuse_logo@2x.png", alt="Tapfuse mobile app development")
         .controls.centered
           button.btn.outlined.expanded
-            a(href="http://tapfuse.io" target='_blank' ) VISIT WEBSITE
+            a(href="http://tapfuse.io" target='_blank' ) VISIT THE WEBSITE
 
