--- a/_partials/crossplatform/crossplatform.jade
+++ b/_partials/crossplatform/crossplatform.jade
@@ -3,7 +3,7 @@ section.hero-headline.centered.bg-secondary
     .row
       .col-md-10.col-md-offset-1
         .content
-          h1.display-3 Cross-platform application
+          h1.display-3 Cross-platform applications
           p.title EventSpark app is accessible on all commonly used modern platrofms
           .image-cont
             img.platform(src="img/crossplatform/ios@2x.png", alt="iOS")
