--- a/_partials/events/events.jade
+++ b/_partials/events/events.jade
@@ -2,7 +2,7 @@ section.events
   .container
     .row
       .col-md-12
-        h2.display-3 One app for all event types
+        h2.display-3 One app for all events
     .row.top-padding
       .col-xs-6.col-md-4
           .event-item
