--- a/_partials/hero/hero.jade
+++ b/_partials/hero/hero.jade
@@ -154,13 +154,13 @@ header.bg-secondary
             h1.display-3
               | Event at your fingertips
             h2.title
-              | Engage your attendees, feel the power of ultimate event app!
+              | Engage your attendees, feel the power of an ultimate event app!
           .controls
             button.btn.outlined.inverse-secondary
               a(data-scroll href="#product") LEARN MORE
 
             button.btn.outlined.inverse-secondary
-              a(data-scroll href="#contacts") REQUEST DEMO
+              a(data-scroll href="#contacts") REQUEST A DEMO
 
 
 
