--- a/_partials/demo/demo.jade
+++ b/_partials/demo/demo.jade
@@ -3,8 +3,8 @@ section.hero-headline.bg-secondary
     .row
       .col-md-12
         .content.centered
-          h1.display-3 Request demo or price quote now
-          p.title Fill in our contact form  and we will get back to you with personalised demo or price quote
+          h1.display-3 Request a demo or a price quote now
+          p.title Fill in our contact form and we will get back to you soon with a personalised demo and a price quote
           button.btn.outlined.inverse-secondary
             a(data-scroll href="#contacts") GET YOUR DEMO
 
