--- a/_partials/features/features.jade
+++ b/_partials/features/features.jade
@@ -10,7 +10,7 @@ section#features.centered.bg-gray
           .icn
             img.feat(src="img/features/schedule.png", alt="Event agenda")
           h2.headline.underline
-            | Manage schedule
+            | Manage your schedule
           p.subhead-1
             | Give your attendees the autonomy to build and manage their personal schedule.
       .col-xs-12.col-sm-6.col-md-4
@@ -20,7 +20,7 @@ section#features.centered.bg-gray
           h2.headline.underline
             | Networking
           p.subhead-1
-            | Multiple platforms for your attendees to connect, and get to know each other and  exchange ideas.
+            | Multiple ways for your attendees to connect, and get to know each other and exchange ideas.
       .col-xs-12.col-sm-6.col-md-4
         .feature
           .icn
@@ -37,15 +37,16 @@ section#features.centered.bg-gray
           h2.headline.underline
             | Manage data
           p.subhead-1
-            | Easily manage large amounts of data that are required to support sessions (e.g. scientific abstracts)
+            | Easily manage large amounts of data that are required for specific sessions (e.g. scientific conference abstracts).
+
       .col-xs-12.col-sm-6.col-md-4
         .feature
           .icn
             img.feat(src="img/features/note.png", alt="Advanced note taking")
           h2.headline.underline
-            | Advanced note taking
+            | Advance note taking
           p.subhead-1
-            | Enabling user to take notes alongside the presentations and across the app that can be converted and stored as pdf files.
+            | Enables user to take notes alongside the presentations and across the app that can be converted and stored as pdf files.
       .col-xs-12.col-sm-6.col-md-4
         .feature
           .icn
@@ -62,7 +63,7 @@ section#features.centered.bg-gray
           h2.headline.underline
             | Real time feedback
           p.subhead-1
-            | In built feedback and further data provides useful live and digitalized information to track the success of your event.
+            | In built feedback and further data provides useful live and digitalised information to track the success of your event.
       .col-xs-12.col-sm-6.col-md-4
         .feature
           .icn
@@ -70,12 +71,12 @@ section#features.centered.bg-gray
           h2.headline.underline
             | Integrated website
           p.subhead-1
-            | Build it yourself modular website that is fully integrated with your app CMS.
+            | Easily build a modular website that is fully integrated with your app CMS yourself.
       .col-xs-12.col-sm-6.col-md-4
         .feature
           .icn
-            img.feat(src="img/features/lifecycle.png", alt="Increased event lifecycle")
+            img.feat(src="img/features/lifecycle.png", alt="Longer event lifecycle")
           h2.headline.underline
-            | Increased event lifecycle
+            | Longer event lifecycle
           p.subhead-1
             | With the app being accessible days before and after the conference.
