--- a/_partials/features/features.jade
+++ b/_partials/features/features.jade
@@ -44,9 +44,9 @@ section#features.centered.bg-gray
           .icn
             img.feat(src="img/features/note.png", alt="Advanced note taking")
           h2.headline.underline
-            | Advance note taking
+            | Advanced note taking
           p.subhead-1
-            | Enables user to take notes alongside the presentations and across the app that can be converted and stored as pdf files.
+            | Enables the user to take notes alongside the presentations and across the app, that can be converted and stored as PDF files and sent to your  personal email.
       .col-xs-12.col-sm-6.col-md-4
         .feature
           .icn
@@ -63,7 +63,7 @@ section#features.centered.bg-gray
           h2.headline.underline
             | Real time feedback
           p.subhead-1
-            | In built feedback and further data provides useful live and digitalised information to track the success of your event.
+            | Inbuilt feedback forms and further data provide useful live and digitalized information to track the success of your event.
       .col-xs-12.col-sm-6.col-md-4
         .feature
           .icn
