--- a/_partials/crossplatform/crossplatform.jade
+++ b/_partials/crossplatform/crossplatform.jade
@@ -4,7 +4,7 @@ section.hero-headline.centered.bg-secondary
       .col-md-10.col-md-offset-1
         .content
           h1.display-3 Cross-platform applications
-          p.title EventSpark app is accessible on all commonly used modern platrofms
+          p.title eventSpark app is accessible on all commonly used modern platrofms
           .image-cont
             img.platform(src="img/crossplatform/ios@2x.png", alt="iOS")
             img.platform(src="img/crossplatform/android@2x.png", alt="Android")
