--- a/_partials/eventspark/eventspark.jade
+++ b/_partials/eventspark/eventspark.jade
@@ -5,7 +5,7 @@ section#product
         .content.centered
           img.headline-img(src="img/multiple_devices@2x.png", alt="")
           h1.display-2
-            | What is EventSpark?
-          p.subhead-1.justified Mobile apps are no longer a future-leaning technology to explore someday, but a vital tool that attendees seek in order to customise and enhance their event experience. The EventSpark app is the essential companion for both organisers, attendees and sponsors. It facilitates direct engagement between  all those attending the event as well as those who couldn’t make it. Speakers can engage the audience, and the audience can interact with the speakers.  Networking is at the heart of our product and is made easier by our intuitive profiles and communication tools.
+            | What is eventSpark?
+          p.subhead-1.justified Mobile apps are no longer a future-leaning technology to explore someday, but a vital tool that attendees seek in order to customise and enhance their event experience. The eventSpark app is the essential companion for both organisers, attendees and sponsors. It facilitates direct engagement between  all those attending the event as well as those who couldn’t make it. Speakers can engage the audience, and the audience can interact with the speakers.  Networking is at the heart of our product and is made easier by our intuitive profiles and communication tools.
 
 
