--- a/_layout.jade
+++ b/_layout.jade
@@ -23,7 +23,7 @@ html
   script(type='text/javascript', src='js/libs.js')
 
   script.
-    new Vivus('animation', {type: 'delayed', duration: 150} );
+    new Vivus('animation', {type: 'scenario', duration: 150} );
 
   script.
     smoothScroll.init({
