--- a/_partials/hero/hero.jade
+++ b/_partials/hero/hero.jade
@@ -114,38 +114,39 @@ header.bg-secondary
               path(fill='none', stroke='#FFFFFF', stroke-miterlimit='10', d='M208.4,458.8l6.2-6.2v19.1c0,5.1-4.2,9.3-9.3,9.3h-30.9\
               c-5.1,0-9.3-4.2-9.3-9.3v-30.9c0-5.1,4.2-9.3,9.3-9.3h19.1l-6.2,6.2h-12.9c-1.7,0-3.1,1.4-3.1,3.1v30.9c0,1.7,1.4,3.1,3.1,3.1h30.9\
               c1.7,0,3.1-1.4,3.1-3.1V458.8z')
-            polyline(fill='none', stroke='#FFFFFF', stroke-width='2', stroke-miterlimit='10', points='494.9,167.8 490.6,143.4 769.1,94.2 \
-            835.5,469.9 557,519.2 497.5,182.5 ')
-            rect(x='553.5', y='478.4', transform='matrix(0.9847 -0.1741 0.1741 0.9847 -74.1044 128.4186)', fill='none', stroke='#FFFFFF', stroke-width='2.3218', stroke-miterlimit='10', width='282.8', height='16.3')
-            rect(x='567.6', y='374.8', transform='matrix(0.9847 -0.1741 0.1741 0.9847 -56.0875 123.5772)', fill='none', stroke='#FFFFFF', stroke-miterlimit='10', width='217.4', height='13.4')
-            rect(x='572.2', y='400.8', transform='matrix(0.9847 -0.1741 0.1741 0.9847 -60.5588 124.7787)', fill='none', stroke='#FFFFFF', stroke-miterlimit='10', width='217.4', height='13.4')
-            rect(x='577.9', y='438.6', transform='matrix(0.9847 -0.1741 0.1741 0.9847 -67.9763 115.8277)', fill='none', stroke='#FFFFFF', stroke-miterlimit='10', width='96.4', height='13.4')
-            circle(fill='none', stroke='#FFFFFF', stroke-width='2.3218', stroke-miterlimit='10', cx='661.8', cy='287.4', r='66.9')
-            circle(fill='none', stroke='#FFFFFF', stroke-width='2', stroke-miterlimit='10', cx='661.8', cy='287.4', r='66.9')
-            path(fill='none', stroke='#FFFFFF', stroke-width='2', stroke-miterlimit='10', d='M497.4,182.1l7.2,40.5l278.5-49.2l-14-79.1\
-            l-278.5,49.2l4.3,24.4 M594.7,160.9c1-3.1,3.7-5.6,7.1-6.2l65.2-11.5c5-0.9,9.8,2.5,10.7,7.5c0.9,5-2.5,9.8-7.5,10.7l-10.2,2')
-            path(fill='none', stroke='#FFFFFF', stroke-width='2.3218', stroke-miterlimit='10', d='M651.6,151.8c8.1-5.6,8.8-7.4,8.8-7.4l7.4-1.3\
-            c0,0,4.4,0.1,6.8,2.3c2.7,2.4,2.2,3.3,2.2,3.3s0.7,7-19.4,15.8')
-            path(fill='none', stroke='#FFFFFF', stroke-width='2', stroke-miterlimit='10', d='M659.2,163.6c-5.8,3.2-14.4,6.4-24.6,9.7\
-            c-20.8,6.7-40.6-4.1-54.7-11.1c-38.6-19-73.8,5-93.3,33.4c-7.9,11.5-14.1,25-18.1,37.6c-6.9,21.8-12.4,43.9-15.1,66.9\
-            c-4.3,36.2-7.7,252.3-8.6,288.8c-0.5,21.8-3.5,44.2-17.2,62.7c-8.2,11.1-19.1,16.4-35.2,16.4c-81.8,0-70.6-135.3-69.5-261.5\
-            c0.2-27.2,1.6-62.2,15.2-135.1c8.2-36.2,21.2-70.6,37.6-103.7c13.5-27.3,30.7-52.3,50.7-74.8C449.8,66.7,478,45.9,512,34.4\
-            c17.2-5.9,34.4-11.9,52-15.9c35-8,69.4-6.8,101.8,11.3c18.8,10.5,29.1,26.1,28.5,47.8c-0.3,10-1.9,19.9-2.9,29.9\
-            c-4,0.5-8,1-12.1,1.5c1.2-12.4,8-24.7,8.3-37.1c0.3-11.8-10.7-21.7-20.3-28C659,38.5,649.6,34,640,31.3c-19.9-5.7-39.9-7.4-61-3.8\
-            c-31.1,5.2-60.4,15.2-88.3,29.1c-31.2,15.6-54.7,40.3-75,68.2c-31.2,42.8-52.1,90.4-64.9,141.6c-7,27.8-9.4,47.3-11.9,79.9\
-            c-1.9,24.7-17.1,231.3,15.4,288.4c5.7,10,9.9,17.2,18.8,23.9c12.6,9.4,31.9,3.7,42.9-11.3c11.9-16.1,14.8-33.3,17.1-52.1\
-            c2.5-20.9,1.9-222.2,3.4-243.3c1.6-21.9,2.7-44.1,6.6-65.7c6.9-38.3,13.5-78.7,40.6-107.9c9.1-9.8,19.7-17.9,32.1-23.7\
-            c19.3-9,40.7-10.3,60.5-2.3c6.2,2.5,10.5,3.9,16.5,6.8c13.8,6.5,26.7,6.3,40.5,2.2c5.8-1.4,16.9-8.6,18.1-9.5')
-            path(fill='none', stroke='#FFFFFF', stroke-miterlimit='10', d='M616.8,336.9c1.7-1,3.3-1.9,4.9-3c4.9-3.2,9.8-6.5,14.7-9.7\
-            c2.2-1.5,4.5-2.9,7-3.9c1.5-0.6,2.4-1.6,2.9-3c0.8-2.1,1.4-4.3,2-6.4c0.2-0.7,0.4-1.3,1.2-1.5c0.2-0.1,0.4-0.2,0.6-0.3\
-            c0.9-0.4,0.9-0.4,0.4-1.4c-0.7-1.2-1.8-2-2.8-2.8c-0.7-0.6-1.1-1.3-1.4-2.1c-0.8-2.8-1.6-5.6-2.3-8.4c-0.1-0.5-0.3-1-0.9-0.9\
-            c-2.6,0.3-3.9-1.2-5-3.2c-1.1-2.1-1.8-4.3-2.4-6.5c-0.3-0.9-0.5-1.9-0.8-2.8c-0.4-1.2-0.2-2.3,0.2-3.4c0.5-1.4,0.4-2.8-0.2-4.2\
-            c-0.5-1.2-1-2.4-1.4-3.7c-1.3-4.2-2.3-8.4-2-12.8c0.4-5.4,2.7-9.6,7.5-12.4c2.6-1.5,5.1-3.1,7.8-4.4c4.6-2.2,9.4-3.3,14.5-2.5\
-            c1.4,0.2,2.9,0.6,4.2,1.1c0.9,0.3,1.7,1,2.5,1.5c0.4,0.2,0.9,0.4,1.3,0.4c0.7,0.1,1.5,0.1,2.3,0c1.3-0.2,2.2,0.4,3,1.3\
-            c1.7,1.6,2.7,3.7,3.6,5.9c1,2.6,1.4,5.2,1.7,8c0.2,2.3,0.5,4.6,0.7,6.9c0.1,0.9,0.2,1.8,0.4,2.6c0.3,1.2,0.8,2.2,1.7,3.1\
-            c1.5,1.7,2.2,3.8,2.5,5.9c0.3,2.2,0.4,4.5,0.1,6.8c-0.2,2-0.9,3.7-2.6,4.8c-1.6,1-1.8,2.7-1.7,4.4c0.1,1.2,0.2,2.5,0.4,3.7\
-            c0.3,2-0.2,3.8-1.3,5.5c-0.7,1.1-1,2.3-0.9,3.6c0,0.4,0.2,0.5,0.6,0.5c0.7,0,1.4,0,2.1-0.1c0.6-0.1,1,0.2,1.4,0.7\
-            c1.3,1.8,2.7,3.5,4.1,5.2c0.2,0.3,0.5,0.5,0.8,0.8c0.8,0.6,1.6,1.2,2.7,1.2c4.9,0.1,9.6,1.5,14.3,2.5c5.3,1.2,10.5,2.4,15.8,3.3')
+            g
+              polyline(data-start='150', data-duration='90', fill='none', stroke='#FFFFFF', stroke-width='2', stroke-miterlimit='10', points='494.9,167.8 490.6,143.4 769.1,94.2 \
+              835.5,469.9 557,519.2 497.5,182.5 ')
+              rect(data-start='150', data-duration='90', x='553.5', y='478.4', transform='matrix(0.9847 -0.1741 0.1741 0.9847 -74.1044 128.4186)', fill='none', stroke='#FFFFFF', stroke-width='2.3218', stroke-miterlimit='10', width='282.8', height='16.3')
+              rect(data-start='150', data-duration='90', x='567.6', y='374.8', transform='matrix(0.9847 -0.1741 0.1741 0.9847 -56.0875 123.5772)', fill='none', stroke='#FFFFFF', stroke-miterlimit='10', width='217.4', height='13.4')
+              rect(data-start='150', data-duration='90', x='572.2', y='400.8', transform='matrix(0.9847 -0.1741 0.1741 0.9847 -60.5588 124.7787)', fill='none', stroke='#FFFFFF', stroke-miterlimit='10', width='217.4', height='13.4')
+              rect(data-start='150', data-duration='90', x='577.9', y='438.6', transform='matrix(0.9847 -0.1741 0.1741 0.9847 -67.9763 115.8277)', fill='none', stroke='#FFFFFF', stroke-miterlimit='10', width='96.4', height='13.4')
+              circle(data-start='150', data-duration='90', fill='none', stroke='#FFFFFF', stroke-width='2.3218', stroke-miterlimit='10', cx='661.8', cy='287.4', r='66.9')
+              circle(data-start='150', data-duration='90', fill='none', stroke='#FFFFFF', stroke-width='2', stroke-miterlimit='10', cx='661.8', cy='287.4', r='66.9')
+              path(data-start='150', data-duration='90', fill='none', stroke='#FFFFFF', stroke-width='2', stroke-miterlimit='10', d='M497.4,182.1l7.2,40.5l278.5-49.2l-14-79.1\
+              l-278.5,49.2l4.3,24.4 M594.7,160.9c1-3.1,3.7-5.6,7.1-6.2l65.2-11.5c5-0.9,9.8,2.5,10.7,7.5c0.9,5-2.5,9.8-7.5,10.7l-10.2,2')
+              path(data-start='150', data-duration='90', fill='none', stroke='#FFFFFF', stroke-width='2.3218', stroke-miterlimit='10', d='M651.6,151.8c8.1-5.6,8.8-7.4,8.8-7.4l7.4-1.3\
+              c0,0,4.4,0.1,6.8,2.3c2.7,2.4,2.2,3.3,2.2,3.3s0.7,7-19.4,15.8')
+              path(data-start='150', data-duration='90', fill='none', stroke='#FFFFFF', stroke-width='2', stroke-miterlimit='10', d='M659.2,163.6c-5.8,3.2-14.4,6.4-24.6,9.7\
+              c-20.8,6.7-40.6-4.1-54.7-11.1c-38.6-19-73.8,5-93.3,33.4c-7.9,11.5-14.1,25-18.1,37.6c-6.9,21.8-12.4,43.9-15.1,66.9\
+              c-4.3,36.2-7.7,252.3-8.6,288.8c-0.5,21.8-3.5,44.2-17.2,62.7c-8.2,11.1-19.1,16.4-35.2,16.4c-81.8,0-70.6-135.3-69.5-261.5\
+              c0.2-27.2,1.6-62.2,15.2-135.1c8.2-36.2,21.2-70.6,37.6-103.7c13.5-27.3,30.7-52.3,50.7-74.8C449.8,66.7,478,45.9,512,34.4\
+              c17.2-5.9,34.4-11.9,52-15.9c35-8,69.4-6.8,101.8,11.3c18.8,10.5,29.1,26.1,28.5,47.8c-0.3,10-1.9,19.9-2.9,29.9\
+              c-4,0.5-8,1-12.1,1.5c1.2-12.4,8-24.7,8.3-37.1c0.3-11.8-10.7-21.7-20.3-28C659,38.5,649.6,34,640,31.3c-19.9-5.7-39.9-7.4-61-3.8\
+              c-31.1,5.2-60.4,15.2-88.3,29.1c-31.2,15.6-54.7,40.3-75,68.2c-31.2,42.8-52.1,90.4-64.9,141.6c-7,27.8-9.4,47.3-11.9,79.9\
+              c-1.9,24.7-17.1,231.3,15.4,288.4c5.7,10,9.9,17.2,18.8,23.9c12.6,9.4,31.9,3.7,42.9-11.3c11.9-16.1,14.8-33.3,17.1-52.1\
+              c2.5-20.9,1.9-222.2,3.4-243.3c1.6-21.9,2.7-44.1,6.6-65.7c6.9-38.3,13.5-78.7,40.6-107.9c9.1-9.8,19.7-17.9,32.1-23.7\
+              c19.3-9,40.7-10.3,60.5-2.3c6.2,2.5,10.5,3.9,16.5,6.8c13.8,6.5,26.7,6.3,40.5,2.2c5.8-1.4,16.9-8.6,18.1-9.5')
+              path(data-start='150', data-duration='90', fill='none', stroke='#FFFFFF', stroke-miterlimit='10', d='M616.8,336.9c1.7-1,3.3-1.9,4.9-3c4.9-3.2,9.8-6.5,14.7-9.7\
+              c2.2-1.5,4.5-2.9,7-3.9c1.5-0.6,2.4-1.6,2.9-3c0.8-2.1,1.4-4.3,2-6.4c0.2-0.7,0.4-1.3,1.2-1.5c0.2-0.1,0.4-0.2,0.6-0.3\
+              c0.9-0.4,0.9-0.4,0.4-1.4c-0.7-1.2-1.8-2-2.8-2.8c-0.7-0.6-1.1-1.3-1.4-2.1c-0.8-2.8-1.6-5.6-2.3-8.4c-0.1-0.5-0.3-1-0.9-0.9\
+              c-2.6,0.3-3.9-1.2-5-3.2c-1.1-2.1-1.8-4.3-2.4-6.5c-0.3-0.9-0.5-1.9-0.8-2.8c-0.4-1.2-0.2-2.3,0.2-3.4c0.5-1.4,0.4-2.8-0.2-4.2\
+              c-0.5-1.2-1-2.4-1.4-3.7c-1.3-4.2-2.3-8.4-2-12.8c0.4-5.4,2.7-9.6,7.5-12.4c2.6-1.5,5.1-3.1,7.8-4.4c4.6-2.2,9.4-3.3,14.5-2.5\
+              c1.4,0.2,2.9,0.6,4.2,1.1c0.9,0.3,1.7,1,2.5,1.5c0.4,0.2,0.9,0.4,1.3,0.4c0.7,0.1,1.5,0.1,2.3,0c1.3-0.2,2.2,0.4,3,1.3\
+              c1.7,1.6,2.7,3.7,3.6,5.9c1,2.6,1.4,5.2,1.7,8c0.2,2.3,0.5,4.6,0.7,6.9c0.1,0.9,0.2,1.8,0.4,2.6c0.3,1.2,0.8,2.2,1.7,3.1\
+              c1.5,1.7,2.2,3.8,2.5,5.9c0.3,2.2,0.4,4.5,0.1,6.8c-0.2,2-0.9,3.7-2.6,4.8c-1.6,1-1.8,2.7-1.7,4.4c0.1,1.2,0.2,2.5,0.4,3.7\
+              c0.3,2-0.2,3.8-1.3,5.5c-0.7,1.1-1,2.3-0.9,3.6c0,0.4,0.2,0.5,0.6,0.5c0.7,0,1.4,0,2.1-0.1c0.6-0.1,1,0.2,1.4,0.7\
+              c1.3,1.8,2.7,3.5,4.1,5.2c0.2,0.3,0.5,0.5,0.8,0.8c0.8,0.6,1.6,1.2,2.7,1.2c4.9,0.1,9.6,1.5,14.3,2.5c5.3,1.2,10.5,2.4,15.8,3.3')
 
     .row
       .col-xs-12
