new client logo

--- a/_partials/clients/clients.jade
+++ b/_partials/clients/clients.jade
@@ -63,6 +63,9 @@ section#clients.bg-gray
     .row
       .col-xs-6.col-sm-4.col-md-3
         .client
+          img(src="img/clients/19_orrick.png", alt="Orrick")
+      .col-xs-6.col-sm-4.col-md-3
+        .client
           img(src="img/clients/17_wikimania.png", alt="Wikimania 2014")
       .col-xs-6.col-sm-4.col-md-3
         .client
