google webtools verify

--- a/_layout.jade
+++ b/_layout.jade
@@ -14,6 +14,7 @@ html
     meta(name="apple-mobile-web-app-capable" content="yes")
     meta(name="apple-mobile-web-app-status-bar-style" content="black")
     meta(name="apple-mobile-web-app-title" content="Event management software platform")
+    meta(name="google-site-verification" content="OoxpzQri28tjh5ZaVSoiu0t_mAg3-1HyxyqMCewpAXY")
 
   body(data-spy="scroll", data-offset="65", target="#navbar")
     != yield
