--- a/_partials/about/about.jade
+++ b/_partials/about/about.jade
@@ -5,7 +5,7 @@ section#about
         .content
           h3.display-1 About us
           p.subhead-1.justified
-            | TapFuse is a mobile application development company based in London that offers a complimentary suite of applications for clients globally. Our aim is to develop simple, intuitive, and secure multi-platform applications that help to connect and share information in a unique social media system for professional and educational environments.
+            | TapFuse is a London-based mobile application development company. TapFuse offers a complimentary array of applications for clients globally. Our aim is to develop simple, intuitive and secure multi-platform applications that help connect and share information in a unique social media system for professional and educational environments.
       .col-xs-12.col-md-6
         .img-content
           img.tapfuse(src="img/tapfuse_logo@2x.png", alt="Tapfuse mobile app development")
