--- a/_partials/features/features.jade
+++ b/_partials/features/features.jade
@@ -12,7 +12,7 @@ section#features.centered.bg-gray
           h2.headline.underline
             | Manage your schedule
           p.subhead-1
-            | Give your attendees the autonomy to build and manage their personal schedule.
+            | Give your attendees the flexibility to build and manage their personal schedule.
       .col-xs-12.col-sm-6.col-md-4
         .feature
           .icn
@@ -20,7 +20,7 @@ section#features.centered.bg-gray
           h2.headline.underline
             | Networking
           p.subhead-1
-            | Multiple ways for your attendees to connect, and get to know each other and exchange ideas.
+            | Numerous ways for attendees to connect, get to know each other and exchange ideas.
       .col-xs-12.col-sm-6.col-md-4
         .feature
           .icn
@@ -28,7 +28,7 @@ section#features.centered.bg-gray
           h2.headline.underline
             | Live polling
           p.subhead-1
-            | Direct engagement between key speakers and the audience, through live poling and the discussion boards.
+            | Direct engagement between key speakers and the audience through live polling and discussion boards.
     .row
       .col-xs-12.col-sm-6.col-md-4
         .feature
@@ -46,7 +46,7 @@ section#features.centered.bg-gray
           h2.headline.underline
             | Advanced note taking
           p.subhead-1
-            | Enables the user to take notes alongside the presentations and across the app, that can be converted and stored as PDF files and sent to your  personal email.
+            | Allows users to take notes during presentations; which can later be converted and stored as PDF files and sent to your personal email.
       .col-xs-12.col-sm-6.col-md-4
         .feature
           .icn
@@ -63,7 +63,7 @@ section#features.centered.bg-gray
           h2.headline.underline
             | Real time feedback
           p.subhead-1
-            | Inbuilt feedback forms and further data provide useful live and digitalized information to track the success of your event.
+            | Built-in feedback forms and data provide useful live information to track the success of your event.
       .col-xs-12.col-sm-6.col-md-4
         .feature
           .icn
@@ -71,7 +71,7 @@ section#features.centered.bg-gray
           h2.headline.underline
             | Integrated website
           p.subhead-1
-            | Easily build a modular website that is fully integrated with your app CMS yourself.
+            | Easily build a modular website that is fully integrated with your app CMS.
       .col-xs-12.col-sm-6.col-md-4
         .feature
           .icn
@@ -79,4 +79,4 @@ section#features.centered.bg-gray
           h2.headline.underline
             | Longer event lifecycle
           p.subhead-1
-            | With the app being accessible days before and after the conference.
+            | The app is accessible days before and after the event.
