--- a/_partials/eventspark/eventspark.jade
+++ b/_partials/eventspark/eventspark.jade
@@ -3,9 +3,9 @@ section#product
     .row
       .col-md-12
         .content.centered
-          img.headline-img(src="img/multiple_devices@2x.png", alt="")
+          img.headline-img(src="img/multiple_devices@2x.png", alt="eventSpark app")
           h1.display-2
             | What is eventSpark?
-          p.subhead-1.justified Mobile apps are no longer a future-leaning technology to explore someday, but a vital tool that attendees seek in order to customise and enhance their event experience. The eventSpark app is the essential companion for both organisers, attendees and sponsors. It facilitates direct engagement between  all those attending the event as well as those who couldn’t make it. Speakers can engage the audience, and the audience can interact with the speakers.  Networking is at the heart of our product and is made easier by our intuitive profiles and communication tools.
+          p.subhead-1.justified Mobile apps are no longer considered ‘technology for the future’ but a vital tool for everyday life. The eventSpark app is the essential companion for organisers, attendees and sponsors of events and helps customise and enhance an attendee’s event experience. The app facilitates direct engagement between all those attending the event as well as those not in attendance. Speakers can engage the audience and the audience can interact with the speakers. Networking is at the heart of eventSpark and is made easier by intuitive profiles and communication tools to maximise your experience.
 
 
