new client logos, old info email removed

--- a/_partials/contact/contact.jade
+++ b/_partials/contact/contact.jade
@@ -16,7 +16,7 @@ section#contacts.bg-gray
                 .address
                   img.adr_icon(src="img/contact/location@2x.png" alt="UK Headquaters address")
                   p.subhead-1.icn-float Tapfuse Limited<br> 16-24 Underwood Street <br> London, UK
-                .address
+                //- .address
                   img.adr_icon(src="img/contact/email@2x.png" alt="Email address")
                   a(href="mailto:info@tapfuse.io").subhead-1.icn-float info@tapfuse.io
                 .address
